k8s/hml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8snode-api-service
  namespace: k8snode-hml
  labels:
    app: k8snode-api
    environment: hml
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: k8snode-api
    environment: hml
